--- a/gpanel/src/styles.css
+++ b/gpanel/src/styles.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
 @import "primeicons/primeicons.css";
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+
+@source "../src/**/*.{html,ts}";
 
 :root {
   font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
@@ -28,3 +28,50 @@ header,
 .p-component {
   transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
 }
+
+
+/* Heading */
+.main-card .card-header h2{
+  color:#ffffff !important;
+  text-align:center;
+}
+
+/* Chip */
+.header-navbar .header-right .p-chip{
+  margin-left:0px;
+  padding-left:15px;
+  padding-right:15px;
+  padding-top:5px;
+  padding-bottom:5px;
+}
+
+/* Heading */
+.main-content app-header h2{
+  font-size:24px !important;
+  text-align:left;
+  font-style:normal;
+  text-transform:uppercase;
+}
+
+/* Server grid container */
+.justify-center app-server-list .server-grid-container{
+  transform:translatex(0px) translatey(0px);
+}
+
+/* Card header */
+.main-card .p-card-header .card-header{
+  padding-left:0px;
+}
+
+.p-tag span{
+  margin-left:10px;
+  margin-right:10px;
+  margin-top:2px;
+  margin-bottom:2px;
+}
+
+
+.header-right .p-button-secondary{
+  border-radius: 50px;
+}
+
