Refactor server detail and add advanced component.
Reorganized server detail components into "simple" and "advanced" layouts. Introduced the "Console" component with its structure and basic styling. Updated sidebar, header, and project styles to align with the changes.

--- a/gpanel/src/app/components/server-detail-simple/server-detail.html
+++ b/gpanel/src/app/components/server-detail-simple/server-detail.html
@@ -6,6 +6,10 @@
       (click)="goBack()"
       [outlined]="true">
     </p-button>
+    <p-togglebutton [(ngModel)]="checked" onLabel="On" offLabel="Off" size="small" class="min-w-16"></p-togglebutton>
+<!--    <span class="material-symbols-outlined">-->
+<!--terminal-->
+<!--</span>-->
   </div>
 
   <div *ngIf="server" class="detail-content">
