--- a/gpanel/src/app/layout/sidebar/sidebar.html
+++ b/gpanel/src/app/layout/sidebar/sidebar.html
@@ -1,13 +1,19 @@
 <nav class="sidebar">
   <div class="sidebar-header">
     <div class="sidebar-logo">
-      <span class="logo-icon">J</span>
-      <span class="logo-text">jj</span>
+      <span class="logo-icon">Projekt Name</span>
     </div>
   </div>
 
   <ul class="sidebar-menu">
+
     <li class="menu-item active">
+      <i class="pi pi-server"></i>
+      <span>Server Information</span>
+    </li>
+
+
+    <li class="menu-item">
       <i class="pi pi-pen-to-square"></i>
       <span>Console</span>
     </li>
@@ -38,16 +44,6 @@
       <i class="pi pi-server"></i>
       <span>Databases</span>
       <span class="badge">0</span>
-    </li>
-
-    <li class="menu-item">
-      <i class="pi pi-globe"></i>
-      <span>Network</span>
-    </li>
-
-    <li class="menu-item">
-      <i class="pi pi-list"></i>
-      <span>Activity</span>
     </li>
 
     <li class="menu-item">
