--- a/gpanel/src/styles.css
+++ b/gpanel/src/styles.css
@@ -75,3 +75,11 @@ header,
   border-radius: 50px;
 }
 
+
+.material-symbols-outlined {
+  font-variation-settings:
+    'FILL' 0,
+    'wght' 200,
+    'GRAD' 0,
+    'opsz' 20
+}
